// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShippingAddressDisplay stories snapshot > DefaultView story renders and matches snapshot 1`] = `
<div
  class="text-sm font-normal leading-5 text-foreground"
>
  <div>
    <p>
      Jane Doe
    </p>
  </div>
  <p>
    123 Main St Apt 4
  </p>
  <p>
    94102, San Francisco, CA, US
  </p>
</div>
`;

exports[`ShippingAddressDisplay stories snapshot > WithDefaultTag story renders and matches snapshot 1`] = `
<div
  class="space-y-1.5"
>
  <div
    class="flex flex-wrap items-center gap-2"
  >
    <p
      class="text-left text-sm font-medium text-foreground"
    >
      Jane Doe
    </p>
    <span
      class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-secondary/90 text-xs font-normal bg-primary/10 text-primary"
      data-slot="badge"
    >
      Default
    </span>
  </div>
  <p
    class="font-medium text-left text-sm text-muted-foreground"
  >
    123 Main St Apt 4
  </p>
  <p
    class="font-medium text-left text-sm text-muted-foreground"
  >
    94102, San Francisco, CA, US
  </p>
</div>
`;

exports[`ShippingAddressDisplay stories snapshot > WithPhone story renders and matches snapshot 1`] = `
<div
  class="text-sm font-normal leading-5 text-foreground"
>
  <div>
    <p>
      Jane Doe
    </p>
  </div>
  <p>
    123 Main St Apt 4
  </p>
  <p>
    94102, San Francisco, CA, US
  </p>
  <p>
    555-123-4567
  </p>
</div>
`;
